--- a/sesions/week1/example2.html
+++ b/sesions/week1/example2.html
@@ -6,7 +6,7 @@
     <title>Example 2</title>
     <link rel="stylesheet" href="./assets/css/common.css">
     <style>
-        body{ display: flex; flex-direction: column; align-items:center; }
+        body{ display: flex; }
         .flex-container{
             background-color: #191919;
             width: 600px;
@@ -15,14 +15,12 @@
             border-radius: 5px;
             padding: 10px;
 
-            display: flex;
-            flex-direction: row;
-            align-items: center;
+            /* 
+                - 요소들을 '가로'로 나열
+                - 요소를 세로로 '가운데' 정렬
+                - 요소들 '주변에' '간격' 주기
+            */
         }
-
-        .flex-container.around{ justify-content: space-around; }
-        .flex-container.between{ justify-content: space-between; }
-        .flex-container.evenly{ justify-content: space-evenly; }
         
         button{ 
             background-color: #8c14fc; 
@@ -41,41 +39,11 @@
     </style>
 </head>
 <body>
-    <div class="flex-container around">
+    <div class="flex-container">
         <button type="button">
             버튼1
         </button>
         <p >
-            내용 
-        </p>
-        <div>
-            <p>2020.07.30</p>
-        </div>
-        <button type="button">
-            X
-        </button>
-    </div>
-
-    <div class="flex-container between">
-        <button type="button">
-            버튼1
-        </button>
-        <p>
-            내용 
-        </p>
-        <div>
-            <p>2020.07.30</p>
-        </div>
-        <button type="button">
-            X
-        </button>
-    </div>
-
-    <div class="flex-container evenly">
-        <button type="button">
-            버튼1
-        </button>
-        <p>
             내용 
         </p>
         <div>
