2주차 작업 시작

--- a/index.html
+++ b/index.html
@@ -51,16 +51,18 @@
                 <div class="remains">
                     <p><b>0</b>Tasks</p>
                 </div>
-
                 <!-- 추가하기 버튼 -->
-            <button class="btn-create" id="btn-create" type="button" onclick="_form.ui.switch(this)">
-                <i class="fas fa-plus"></i>
-            </button>
+                <button
+                    class="btn-create"
+                    id="btn-create"
+                    type="button"
+                    onclick="_form.ui.switch(this)"
+                >
+                    <i class="fas fa-plus"></i>
+                </button>
             </div>
             <!-- 목록 -->
-            <div class="list">
-                
-            </div>
+            <div class="list"></div>
         </div>
     </body>
 </html>
