--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </button>
             </div>
             <!-- FORM -->
-            <!-- <div class="form">
+            <div class="form">
                 <div class="form-header">
                     <p>새로운 할 일</p>
                 </div>
@@ -75,15 +75,11 @@
                     />
                 </div>
                 <div class="btns">
-                    <button
-                        type="button"
-                        class="submit"
-                        onclick="_form.ui.submit()"
-                    >
+                    <button type="button" class="submit">
                         추가하기
                     </button>
                 </div>
-            </div> -->
+            </div>
             <!-- 목록 -->
             <div class="list"></div>
         </div>
