--- a/index.html
+++ b/index.html
@@ -36,16 +36,10 @@
             <div class="header">
                 <!-- 현재 날짜를 노출 -->
                 <div class="current">
-                    <p class="date">
-                        6
-                    </p>
+                    <p class="date">6</p>
                     <div class="details">
-                        <p class="day">
-                            Thu
-                        </p>
-                        <p class="month">
-                            August, 2020
-                        </p>
+                        <p class="day">Thu</p>
+                        <p class="month">August, 2020</p>
                     </div>
                 </div>
                 <div class="remains">
@@ -75,9 +69,7 @@
                     />
                 </div>
                 <div class="btns">
-                    <button type="button" class="submit">
-                        추가하기
-                    </button>
+                    <button type="button" class="submit">추가하기</button>
                 </div>
             </div>
             <!-- 목록 -->
