--- a/index.html
+++ b/index.html
@@ -69,7 +69,13 @@
                     />
                 </div>
                 <div class="btns">
-                    <button type="button" class="submit">추가하기</button>
+                    <button
+                        type="button"
+                        class="submit"
+                        onclick="_form.ui.submit()"
+                    >
+                        추가하기
+                    </button>
                 </div>
             </div>
             <!-- 목록 -->
